--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,3 +1,9 @@
+.container.portfolio_container {
+    width: 40%;
+    height: 0%;
+}
+
+
 .portfolio_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -40,6 +46,8 @@
         grid-template-columns: 1fr 1fr;
         gap: 1.2rem;
     }
+    .container.portfolio_container {
+        width: 60%;
 }
 
 /*  MEDIA QUIERIES (SMALL DEVICES) */
@@ -49,4 +57,9 @@
         gap: 1rem;
         
     }
+
+    .container.portfolio_container  {
+        width: var(--container-width-sm);
+    }
+}
 }
