--- a/src/components/contacts/contatc.css
+++ b/src/components/contacts/contatc.css
@@ -36,5 +36,36 @@
 }
 
 h5 {
-    color: var(--color-light);
+  color: var(--color-light);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+    background: transparent;
+    border: 2px solid var(--color-primary-variant);
+    resize: none;
+    color: var(--color-white);
+}
+
+@media screen and (max-width: 1024px) {
+    .container.contact_container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+}
+
+
+/*  MEDIA QUIERIES (SMALL DEVICES) */
+@media screen and (max-width: 600px) {
+    .container.contact_container {
+        width: var(  --container-width-sm);
+    }
 }
